--- a/test/datatype/Makefile.am
+++ b/test/datatype/Makefile.am
@@ -14,10 +14,14 @@
 #
 
 if PROJECT_OMPI
-    MPI_TESTS = checksum position position_noncontig ddt_test ddt_raw unpack_ooo ddt_pack external32 ddt_benchmark
+    MPI_TESTS = checksum position position_noncontig ddt_test ddt_raw unpack_ooo ddt_pack external32
     MPI_CHECKS = to_self
 endif
 TESTS = opal_datatype_test $(MPI_TESTS)
+
+if OPAL_cuda_support
+TESTS += ddt_benchmark
+endif
 
 check_PROGRAMS = $(TESTS) $(MPI_CHECKS)
 
@@ -29,17 +33,14 @@ unpack_ooo_LDADD = \
 
 ddt_test_SOURCES = ddt_test.c ddt_lib.c ddt_lib.h
 ddt_test_LDFLAGS = $(WRAPPER_EXTRA_LDFLAGS)
-ddt_test_CFLAGS = -I/mnt/sw/cuda/include -g -O0
-ddt_test_LDADD = $(top_builddir)/ompi/libmpi.la $(top_builddir)/opal/mca/common/cuda/libmca_common_cuda.la -L/mnt/sw/cuda/lib64 -lcudart
+ddt_test_LDADD = $(top_builddir)/ompi/libmpi.la $(top_builddir)/opal/mca/common/cuda/libmca_common_cuda.la
 
+if OPAL_cuda_support
 ddt_benchmark_SOURCES = ddt_benchmark.c ddt_lib.c ddt_lib.h
 ddt_benchmark_LDFLAGS = $(WRAPPER_EXTRA_LDFLAGS)
-ddt_benchmark_CFLAGS = -I/mnt/sw/cuda/include -g -O0
-ddt_benchmark_LDADD = $(top_builddir)/ompi/libmpi.la $(top_builddir)/opal/mca/common/cuda/libmca_common_cuda.la -L/cm/shared/apps/cuda75/toolkit/7.5.18/lib64 -lcudart
-
-#ddt_test_old_SOURCES = ddt_test_old.c ddt_lib.c ddt_lib.h
-#ddt_test_old_LDFLAGS = $(WRAPPER_EXTRA_LDFLAGS)
-#ddt_test_old_LDADD = $(top_builddir)/ompi/libmpi.la
+ddt_benchmark_CFLAGS = @opal_datatype_cuda_CPPFLAGS@ -g -O0
+ddt_benchmark_LDADD = $(top_builddir)/ompi/libmpi.la $(top_builddir)/opal/mca/common/cuda/libmca_common_cuda.la @opal_datatype_cuda_LDFLAGS@ -lcudart
+endif
 
 ddt_raw_SOURCES = ddt_raw.c ddt_lib.c ddt_lib.h
 ddt_raw_LDFLAGS = $(OMPI_PKG_CONFIG_LDFLAGS)
